// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytical Card Render without Crashing 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytical Card with AnalyticalCardHeader 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div
      class="AnalyticalCardHeader-cardHeader"
    >
      <div
        class="AnalyticalCardHeader-headerContent"
      >
        <div
          class="AnalyticalCardHeader-headerTitles"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <div
              class="AnalyticalCardHeader-headerText"
            >
              Header Title
            </div>
            <div
              class="ObjectStatus-objectStatus AnalyticalCardHeader-counter"
            />
          </div>
          <div
            class="AnalyticalCardHeader-subHeaderText"
          />
        </div>
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsEnd FlexBox-flexWrapNoWrap AnalyticalCardHeader-kpiContent"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
          >
            <div
              class="AnalyticalCardHeader-valueAndUnit"
            >
              <div
                class="AnalyticalCardHeader-value"
              />
              <div
                class="AnalyticalCardHeader-indicatorAndUnit"
              >
                <div
                  class="AnalyticalCardHeader-unit"
                />
              </div>
            </div>
          </div>
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap AnalyticalCardHeader-targetAndDeviation"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap AnalyticalCardHeader-targetAndDeviationColumn"
            >
              <span>
                Target
              </span>
              <span
                class="AnalyticalCardHeader-targetAndDeviationValue"
              />
            </div>
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap AnalyticalCardHeader-targetAndDeviationColumn"
            >
              <span>
                Deviation
              </span>
              <span
                class="AnalyticalCardHeader-targetAndDeviationValue"
              />
            </div>
          </div>
        </div>
        <div
          class="AnalyticalCardHeader-description"
        />
      </div>
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Analytical Card with custom header 1`] = `
<DocumentFragment>
  <div
    class="AnalyticalCard-card"
  >
    <div>
      I'm a header!
    </div>
    <div
      class="AnalyticalCard-content"
    >
      <span
        class="Text-text"
      >
        I'm a content!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
